[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "base58>=2.1.1",
    "cryptography>=44.0.3",
    "email-validator>=2.2.0",
    "flask-wtf>=1.2.2",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "solana>=0.36.6",
    "solders>=0.26.0",
    "sqlalchemy>=2.0.41",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3",
    "flask-dance>=7.1.0",
    "flask-login>=0.6.3",
    "oauthlib>=3.2.2",
    "pyjwt>=2.10.1",
    "pyotp>=2.9.0",
    "qrcode>=8.2",
    "bcrypt>=4.3.0",
    "pillow>=11.2.1",
    "requests>=2.32.3",
    "psutil>=7.0.0",
    "abstract-solana==0.0.2.97",
    "construct>=2.10.68",
    "anchorpy>=0.21.0",
    "cryptography>=44.0.3",
    "tradingview-screener==2.5.0",
    "trading-strategy==0.24.4",
    "photon-pump>=0.9.5.2",
    "interface-meta==1.3.0",
    "sql-metadata==2.15.0",
    "fastapi-csrf-protect==0.3.7",
    "flask-anticsrf>=0.0.2",
    "fuzzytm==2.0.9",
    "fuzzywuzzy==0.18.0",
]
